--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,40 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar color=primary>
+        <ion-title>
+            Sounds
+        </ion-title>
+        <ion-buttons end>
+            <button ion-button *ngIf="!ordenar" (click)="ordenar = true">Ordenar</button>
+            <button ion-button *ngIf="ordenar" (click)="ordenar = false">Ready</button>
+        </ion-buttons>
+    </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+
+    <ion-refresher [enabled]="!ordenar" (ionRefresh)="reboot($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
+
+    <ion-list [reorder]="ordenar" (ionItemReorder)="reordenar($event)">
+        <ion-item-sliding *ngFor="let animal of animales; let x = index">
+            <ion-item (click)="reproducir(animal)">
+                <ion-avatar item-left>
+                    <!--con el item left el component va a la izquierda-->
+                    <img [src]="animal.imagen" alt="animal.nombre">
+                </ion-avatar>
+                <h2>{{animal.nombre}}</h2>
+                <ion-icon *ngIf="!animal.reproduciendo" name="play" item-right></ion-icon>
+                <ion-icon *ngIf="animal.reproduciendo" name="pause" item-right></ion-icon>
+            </ion-item>
+            <ion-item-options side="right">
+
+                <button ion-button color="danger" (click)="delete(x)">
+                  <ion-icon name="trash"></ion-icon>
+                  Eliminar
+                </button>
+            </ion-item-options>
+        </ion-item-sliding>
+    </ion-list>
+
 </ion-content>
